# osteoid

./: automated_test.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  test-suite.yml
osteoid/: LICENSE  cli.py  lib.py  skeleton.py  util.py
osteoid/formats/: __init__.py  navis.py  ostd.py  precomputed.py  swc.py
osteoid/formats/ostd/: README.md  SPEC.md  STORY.md  __init__.py  header.py  skeleton.py  spatial_index.py  types.py
src/: chunk.hpp  fastosteoid.cpp  lib.hpp
tests/: ostd_format_test.py
